--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: JctSeqData
-Version: 0.99.4
+Version: 1.0.0
 Title: Example Junction Count data for use with JunctionSeq
-Authors@R: c(person("Stephen", "Hartley", role = c("aut", "cre"), email =
-          "JunctionSeq-contact@list.nih.gov", comment = "PhD"))
-Depends: R (>= 3.3)
-Suggests: knitr, BiocStyle, JunctionSeq, DESeq2, DEXSeq, edgeR
-Description: Junction count data from an example dataset taken from a subset of the RNA-seq
-          reads from six samples. Data was subsampled and modified to provide edge cases for
-          testing and to reduce file sizes.
+Authors@R: c(person("Stephen", "Hartley", role = c("aut", "cre"),
+           email = "JunctionSeq-contact@list.nih.gov", comment = "PhD"))
+Depends: R (>= 3.2.2)
+Suggests: knitr, BiocStyle, DESeq2, DEXSeq, edgeR
+Description: Junction count data from an example dataset taken from a subset of the RNA-seq reads from six samples. Data was subsampled and modified to provide edge cases for testing and to reduce file sizes.
 License: file LICENSE
 VignetteBuilder: knitr
 NeedsCompilation: no
@@ -15,5 +13,3 @@ LazyData: true
 URL: http://hartleys.github.io/JunctionSeq/
 BugReports: http://github.com/hartleys/JunctionSeq/issues
 biocViews: Rattus_norvegicus_Data, ExperimentData, Genome, RNASeqData, RepositoryData, GEO
-Author: Stephen Hartley [aut, cre] (PhD)
-Maintainer: Stephen Hartley <JunctionSeq-contact@list.nih.gov>
