Added JunctionSeq to Suggests
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/JctSeqData@3607 db2202da-8704-0410-b924-b125b3cd84ef

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: JctSeqData
-Version: 1.0.0
+Version: 1.0.1
 Title: Example Junction Count data for use with JunctionSeq
 Authors@R: c(person("Stephen", "Hartley", role = c("aut", "cre"),
            email = "JunctionSeq-contact@list.nih.gov", comment = "PhD"))
 Depends: R (>= 3.2.2)
-Suggests: knitr, BiocStyle, DESeq2, DEXSeq, edgeR
+Suggests: knitr, BiocStyle, DESeq2, DEXSeq, edgeR, JunctionSeq
 Description: Junction count data from an example dataset taken from a subset of the RNA-seq reads from six samples. Data was subsampled and modified to provide edge cases for testing and to reduce file sizes.
 License: file LICENSE
 VignetteBuilder: knitr
