--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Version: 1.1.13
 Title: Example Junction Count data for use with JunctionSeq
 Authors@R: c(person("Stephen", "Hartley", role = c("aut", "cre"),
            email = "JunctionSeq-contact@list.nih.gov", comment = "PhD"))
-Depends: R (>= 3.2.2)
-Suggests: knitr, BiocStyle, DESeq2, DEXSeq, edgeR
+Depends: R (>= 3.3)
+Suggests: knitr, BiocStyle, DESeq2, DEXSeq, edgeR, JunctionSeq
 Description: Junction count data from an example dataset taken from a subset of the RNA-seq reads from six samples. Data was subsampled and modified to provide edge cases for testing and to reduce file sizes.
 License: file LICENSE
 VignetteBuilder: knitr
